ros2_ws/log/build_2021-05-20_11-34-49/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/user_input.py", line 59
    self.pos_request_message.request = data<
                                           ^
SyntaxError: invalid syntax

